# ios-resigner

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/core/: device.rs  sideload.rs
src/gui/: app.rs
src/tui/: app.rs
